Bug ID: 182632 Description: Adding JES support Reviwed by: Isvaran Krishnamurthy <ikrishna@netbeans.org>